# nika

./: docker-compose.yml  nika.ini
interface/src/api/sc/agents/: helper.ts
interface/src/components/AlertComponent/: AlertComponent.tsx  AlertContext.tsx  styled.ts
interface/src/components/Chat/SideBar/: SideBar.tsx  styled.ts
interface/src/pages/Demo/: Demo.tsx  Popups.tsx  styled.ts
kb/new_task/: atomic.scs  concept_message_for_creating.scs  lr_creating_new_instance.gwf  message_about_creating.gwf  phrase.gwf  wit.scs
problem-solver/cxx/: CMakeLists.txt
problem-solver/cxx/creatingInstanceByWikiModule/: CMakeLists.txt  CreatingInstanceByWikiModule.cpp  CreatingInstanceByWikiModule.hpp
problem-solver/cxx/creatingInstanceByWikiModule/agent/: CreateInstanceByWikiAgent.cpp  CreateInstanceByWikiAgent.hpp  wiki_result.json
problem-solver/cxx/creatingInstanceByWikiModule/keynodes/: CreatingInstanceByWikiKeynodes.hpp
problem-solver/cxx/interfaceModule/: CMakeLists.txt  InterfaceModule.cpp
problem-solver/cxx/interfaceModule/agent/: CreateAnswerTemplateAgent.cpp  CreateAnswerTemplateAgent.hpp  CreateClassAgent.cpp  CreateClassAgent.hpp  CreateClassInstanceAgent.cpp  CreateClassInstanceAgent.hpp  CreateRelationAgent.cpp  CreateRelationAgent.hpp
problem-solver/cxx/interfaceModule/keynodes/: InterfaceKeynodes.hpp
problem-solver/cxx/messageClassificationModule/: CMakeLists.txt
problem-solver/cxx/messageClassificationModule/rasa_classifier_model/: .dockerignore
scripts/: package-lock.json  package.json
